<resources>
    <string name="app_name">Conteo</string>
    <string name="cod">Codigo Encuestador</string>
    <string name="cronometro">10:00</string>
    <string name="datos_generales">Datos Generales</string>

    <string name="calle1">Calle de Relevamiento</string>
    <string name="calle2">Calle Lateral A</string>
    <string name="calle3">Calle Lateral B</string>
    <string name="temperatura">Temperatura</string>
    <string name="title_dialog">Observaciones</string>
    <string name="condiciones_clima">Condiciones del clima</string>

    <string-array name="condiciones">
        <item>Soleado</item>
        <item>Parcialmente Nublado</item>
        <item>Totalmente Nublado</item>
        <item>Parcialmete Lluvioso</item>
        <item>Luvioso</item>
    </string-array>
</resources>
